--- a/style.css
+++ b/style.css
@@ -75,9 +75,15 @@ p{
     margin: 0 auto;
 }
 
+@media screen and (max-width: 960px) {
+    .container{
+        width: 85%;
+    }
+}
+
 @media screen and (max-width: 780px) {
     .container{
-        width: 95%;
+        width: 90%;
     }
 }
 
@@ -112,7 +118,7 @@ p{
     position: relative;
     display: flex;
     align-items: center;
-    padding: 1em 0;
+    padding: 1.5em 0;
 }
 
 .site-logo{
