--- a/style.css
+++ b/style.css
@@ -704,11 +704,59 @@ p{
 
 /* ------end card----- */
 
+@media screen and (max-width: 780px) {
+    .card-wrapper{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .skill-checklist{
+        width: 100%;
+    }
+}
+
 /* -------------------- */
 /* CFA       */
 /* ---------------------*/
 .cfa{
     background-color: var(--clr-primary-2);
+    color: var(--clr-primary);
+    margin-top: 5em;
+    text-align: center;
+}
+
+.cfa .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2em;
+}
+
+.cfa h2{
+    line-height: 1em;
+}
+
+.cfa__link{
+    min-width: max-content;
+    padding: .5em 1em;
+    color: var(--clr-primary-2);
+    background-color: var(--clr-primary);
+    border: 1px solid var(--clr-primary);
+    border-radius: 5px;
+    font-size: 1.2em;
+}
+
+.cfa__link:hover{
+    color: var(--clr-primary);
+    background-color: var(--clr-primary-2);
+    border: 1px solid var(--clr-primary);
+}
+
+@media screen and (max-width: 960px) {
+    .cfa .container{
+        flex-direction: column;
+        gap: 2em;
+    }
 }
 /* -------------------- */
 /* FOOTER      */
