--- a/style.css
+++ b/style.css
@@ -46,6 +46,11 @@ h3{
     line-height: 3rem;
 }
 
+h4{
+    font-size: 1.3rem;
+    line-height: 3rem;
+}
+
 p{
     font-size: 1.4em;
     line-height: 1.5em;
@@ -62,6 +67,10 @@ p{
 
     h3{
         font-size: 1.5rem;
+    }
+
+    h4{
+        font-size: 1.2rem;
     }
 
     p{
@@ -763,6 +772,30 @@ p{
 /* ---------------------*/
 .footer{
     background-color: var(--clr-primary-2);
+    color: var(--clr-primary);
+}
+
+.footer .container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3em;
+}
+
+.footer > * {
+    line-height: 1.5em;
+}
+
+.footer__header{
+    width: 100px;
+    height: 100px;
+    line-height: 1em;
+    border: 2px solid var(--clr-primary);
+    text-align: center;
+}
+
+footer a{
+    color: var(--primary);
 }
 
 
